# goblet-liquid-ratio

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-02-goblet-liquid-height.md
docs/superpowers/specs/: 2026-06-02-goblet-liquid-height-design.md
eval/: ground_truth.json  render_overlays.py  run_eval.py
examples/: quickstart.py
src/goblet_liquid_ratio/: __init__.py  __main__.py  core.py
tests/: test_goblet_liquid_ratio.py
