[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "goblet-liquid-ratio"
version = "0.1.0"
description = "Estimate orange/red juice height ratio in a fixed goblet via YOLO localization + CV measurement."
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0,<2.3",
    "opencv-python-headless>=4.12,<4.14",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
yolo = ["ultralytics>=8.3,<9"]

[project.scripts]
goblet-liquid-ratio = "goblet_liquid_ratio.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
goblet_liquid_ratio = ["models/*.pt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
